// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)

   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OPENCODE_DB|OPENCODE_DB|OPENCODE_DEV|Global\\.
     Path\\.data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)

   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
     No LSP server available for this file type.

   ✱ Grep "export const OPENCODE_DB|OPENCODE_DB|OPENCODE_DEV|Global\\.
     Path\\.data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a shell output block 1`] = `
"

  $ ls

  file.ts

   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)

   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OPENCODE_DB|OPENCODE_DB|OPENCODE_DEV|Global\\.
     Path\\.data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a padded user message 1`] = `
"
  Check whether the next tool remains separated.


   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)

   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OPENCODE_DB|OPENCODE_DB|OPENCODE_DEV|Global\\.
     Path\\.data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping separates after a multi-line task row 1`] = `
"   ✱ Grep "Task" (2 matches)

   ⠙ Explore Task — Inspect active task spacing

   ✓ General Task — Confirm completed task spacing
     ↳ 1 toolcall · 501ms

   → Read src/cli/cmd/tui/routes/session/index.tsx"
`;

exports[`TUI inline tool wrapping separates a task row from a preceding inline detail 1`] = `
"   → Read src/cli/cmd/tui/routes/session/index.tsx
   ↳ Loaded src/cli/cmd/tui/routes/session/tools.tsx

   ✓ Explore Task — Inspect active task spacing
     ↳ 1 toolcall · 501ms"
`;

exports[`TUI inline tool wrapping separates an inline row from the previous assistant summary 1`] = `
"   ▣ Build · Little Frank · 53.1s

   ✓ Build Task — Review changes
     ↳ 48 toolcalls · 1m 40s"
`;

exports[`TUI inline tool wrapping separates an inline row from the previous assistant error 1`] = `
"│
│  Managed inference requires an active Member plan
│

   ✓ Build Task — Review changes
     ↳ 48 toolcalls · 1m 40s"
`;
